# Herriott-Cell-Configurator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package.json  pyproject.toml
backend/: __init__.py
backend/app/: main.py
backend/app/api/routes/: simulation.py
backend/app/core/: math_utils.py  modes.py  optics.py  ray_tracing.py  simulation.py  wave_optics.py
backend/app/schemas/: simulation.py
backend/app/services/: simulation_service.py
frontend/: index.html  styles.css
frontend/js/: api-client.js  form-state.js  main.js  renderers.js  simulation-reference.js  wave-optics-state.js
scripts/: profile_backend.py
tests/: conftest.py  helpers.py  test_api.py  test_frontend_wave_optics_state.py  test_simulation_core.py  test_wave_optics.py
tests/fixtures/configs/: cav_vex_lg_auto.json  default_tem00.json  tilted_hg_manual.json  unstable_manual.json
tests/reference/: run_js_simulation.mjs
